# tsapi/src/server.ts
@@ -3,6 +3,7 @@ import swaggerUi from 'swagger-ui-express';
 import * as swaggerDocument from '../swagger.json';
 import deviceRoutes from './routes/device';
 import hiveRoutes from './routes/hive';
+import areaRoutes from './routes/area';
 
 const app = express();
 const PORT = 3000;
@@ -16,8 +17,9 @@ app.get('/hello', (req: Request, res: Response) => {
 });
 
 // Device routes
-app.use('/api/devices', deviceRoutes);
-app.use('/api/hives', hiveRoutes);
+app.use('/api/device', deviceRoutes);
+app.use('/api/hive', hiveRoutes);
+app.use('/api/area', areaRoutes);
 
 // Start the server
 app.listen(PORT, () => {
